<resources>
    <string name="app_name">RadioTechMobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="lc_title">Колебательный контур</string>
    <string name="r_title">Параллельное соединение резисторов</string>
    <string name="l_title">Индуктивность катушки</string>
    <string name="led_title">Подключение светодиода</string>
    <string name="reference_book_title">Справочник</string>
    <string name="l_input">Введите L</string>
    <string name="c_input">Введите C</string>
    <string name="f_input">Введите частоту</string>
    <string name="r1_input">Введите R1</string>
    <string name="r2_input">Введите R2</string>
    <string name="r3_input">Введите R3</string>
    <string name="n_input">Введите количество витков</string>
    <string name="d_input">Введите диаметр катушки</string>
    <string name="length_input">Введите длину намотки</string>
    <string name="big_d_ring_input">Введите D</string>
    <string name="d_ring_input">Введите d</string>
    <string name="h_ring_input">Введите h</string>
    <string name="u_input">Напряжение источника</string>
    <string name="u_led_input">Напряжение светодиода</string>
    <string name="i_led_input">Прямой ток светодиода</string>
    <string name="f_calculate">Рассчитать  F</string>
    <string name="l_calculate">Рассчитать  L</string>
    <string name="c_calculate">Рассчитать  C</string>
    <string name="r_led_calculate">Рассчитать  R</string>
    <string name="r_calculate">Рассчитать\nобщее  R</string>
    <string name="reset">Сброс</string>

    <string-array name="spinner_L">
        <item>нГн</item>
        <item>мкГн</item>
        <item>мГн</item>
    </string-array>

    <string-array name="spinner_L_core">
        <item>Без сердечника</item>
        <item>М 7 ВН</item>
        <item>М 9 ВН</item>
        <item>М 20 ВН</item>
        <item>М 30 ВН</item>
        <item>М 50 ВН</item>
        <item>М 60 НН</item>
        <item>М 100 НН</item>
        <item>М 200 НН</item>
        <item>М 300 ННИ</item>
        <item>М 400 НН</item>
        <item>М 450 НМИ</item>
        <item>М 600 НН</item>
        <item>М 700 НМ</item>
        <item>М 800 НН</item>
        <item>М 1000 НН</item>
        <item>М 1500 НМ</item>
        <item>М 1600 НМИ</item>
        <item>М 2000 НН</item>
        <item>М 3000 НМ</item>
        <item>М 4000 НМ</item>
        <item>М 6000 НМ</item>
        <item>М 10000 НМ</item>
        <item>М 20000 НМ</item>
        <item>М 25000 НМ</item>
    </string-array>

    <string-array name="spinner_L_core_ring">
        <item>Выбрать сердечник</item>
        <item>М 7 ВН</item>
        <item>М 9 ВН</item>
        <item>М 20 ВН</item>
        <item>М 30 ВН</item>
        <item>М 50 ВН</item>
        <item>М 60 НН</item>
        <item>М 100 НН</item>
        <item>М 200 НН</item>
        <item>М 300 ННИ</item>
        <item>М 400 НН</item>
        <item>М 450 НМИ</item>
        <item>М 600 НН</item>
        <item>М 700 НМ</item>
        <item>М 800 НН</item>
        <item>М 1000 НН</item>
        <item>М 1500 НМ</item>
        <item>М 1600 НМИ</item>
        <item>М 2000 НН</item>
        <item>М 3000 НМ</item>
        <item>М 4000 НМ</item>
        <item>М 6000 НМ</item>
        <item>М 10000 НМ</item>
        <item>М 20000 НМ</item>
        <item>М 25000 НМ</item>
    </string-array>

    <string-array name="spinner_C">
        <item>пФ</item>
        <item>нФ</item>
        <item>мкФ</item>
    </string-array>

    <string-array name="spinner_F">
        <item>Гц</item>
        <item>КГц</item>
        <item>МГц</item>
    </string-array>

    <string-array name="spinner_R">
        <item>Ом</item>
        <item>КОм</item>
        <item>МОм</item>
    </string-array>

    <string-array name="spinner_d">
        <item>мм</item>
        <item>см</item>
    </string-array>

</resources>