<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRingCoil">

    <ImageView
        android:id="@+id/imageViewRingCoil"
        android:layout_width="176dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ring_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_result_inductance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="L = "
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate_Inductance" />

    <EditText
        android:id="@+id/edit_text_input_N_turns"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/n_input"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_material" />

    <EditText
        android:id="@+id/edit_text_input_big_diameter_ring_coil"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/big_d_ring_input"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input_N_turns" />

    <EditText
        android:id="@+id/edit_text_input_diameter_ring_coil"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/d_ring_input"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input_big_diameter_ring_coil" />

    <EditText
        android:id="@+id/edit_text_input_h_ring_coil"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/h_ring_input"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input_diameter_ring_coil" />

    <Button
        android:id="@+id/button_calculate_Inductance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/l_calculate"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input_h_ring_coil" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/reset"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_calculate_Inductance"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input_h_ring_coil" />

    <Spinner
        android:id="@+id/spinner_material"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:entries="@array/spinner_L_core_ring"
        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRingCoil" />

    <Spinner
        android:id="@+id/spinner_big_diameter_ring_coil"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="109dp"
        android:entries="@array/spinner_d"
        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
        app:layout_constraintStart_toEndOf="@+id/edit_text_input_big_diameter_ring_coil"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRingCoil" />

    <Spinner
        android:id="@+id/spinner_diameter_ring_coil"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="162dp"
        android:entries="@array/spinner_d"
        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
        app:layout_constraintStart_toEndOf="@+id/edit_text_input_diameter_ring_coil"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRingCoil" />

    <Spinner
        android:id="@+id/spinner_h_ring_coil"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="215dp"
        android:entries="@array/spinner_d"
        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
        app:layout_constraintStart_toEndOf="@+id/edit_text_input_h_ring_coil"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRingCoil" />

</androidx.constraintlayout.widget.ConstraintLayout>