<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentR2">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="176dp"
        android:layout_height="187dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/r1r2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_result_RR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="R = "
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate_RR" />

    <EditText
        android:id="@+id/edit_text_input_R1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/r1_input"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/edit_text_input_R2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/r2_input"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input_R1" />

    <Button
        android:id="@+id/button_calculate_RR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/r_calculate"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input_R2" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/reset"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_calculate_RR"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input_R2" />

    <Spinner
        android:id="@+id/spinner_R1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/spinner_R"
        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
        app:layout_constraintStart_toEndOf="@+id/edit_text_input_R1"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Spinner
        android:id="@+id/spinner_R2"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:entries="@array/spinner_R"
        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
        app:layout_constraintStart_toEndOf="@+id/edit_text_input_R2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>